fix: layout z-index css property for fireworks

--- a/src/components/firework/index.scss
+++ b/src/components/firework/index.scss
@@ -5,6 +5,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 1;
   background-color: transparent;
 }
