--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -12,5 +12,5 @@ body {
 
 .layout-wrapper {
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
